--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 header {
-  background: url("https://images.unsplash.com/photo-1599365726864-ac222011504a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
+  background: url("./images/HomewithPool.jpeg");
 }
 
 body {
